# LEP-downloader

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LEP-archive-parser.py  LEP-downloader.py  LICENSE  LICENSE.rst  README.md  README.rst  luke_english_podcast_downloader.py  noxfile.py  pyproject.toml
.github/: FUNDING.yml  labels.yml  release-drafter.yml
.github/workflows/: constraints.txt  labeler.yml  pr-labeling.yml  pre-release.yml  release.yml  tests.yml
docs/: conf.py  index.rst  manpage.rst  motivation.rst  reference.rst  requirements.txt  usage.rst
src/lep_downloader/: __init__.py  __main__.py  cli.py  cli_shared.py  config.py  data_getter.py  downloader.py  exceptions.py  lep.py  parser.py
src/lep_downloader/commands/: __init__.py  download.py  parse.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_download.py  test_cli_parse.py  test_downloader.py  test_main.py  test_parser.py
tests/fixtures/: 2021-08-10_lep-archive-page-content-pretty.html  mocked-db-json-equal-786-objects.json
tests/fixtures/ep_htmls/: 2021-08-11_lep-e703-page-content-pretty.html  2021-08-11_lep-e711-page-content-pretty.html  2021-08-11_lep-e733-page-content-pretty.html  2021-09-07_09-14-02 teacherluke.co.uk _2009_10_19_episode-11-michael-jackson_.html  2021-09-07_09-14-02 teacherluke.co.uk _2009_10_19_extra-podcast-12-phrasal-verbs_.html  2021-09-07_09-14-02 teacherluke.co.uk _2010_03_25_london-video-interviews-pt-1_.html  2021-09-07_09-14-02 teacherluke.co.uk _2014_06_30_193-culture-shock-life-in-london-pt-2_.html  2021-09-07_09-14-02 teacherluke.co.uk _2015_10_07_300-episode-300-part-1_.html  2021-09-07_09-14-02 teacherluke.co.uk _2015_10_07_300-episode-300-part-2_.html  2021-09-07_09-14-02 teacherluke.co.uk _2016_08_07_370-in-conversation-with-rob-ager-from.html  2021-09-07_09-14-02 teacherluke.co.uk _2017_03_11_lep-on-zep-my-recent-interview-on-zden.html  2021-09-07_09-14-02 teacherluke.co.uk _2017_05_26_i-was-invited-onto-the-english-across-.html  2021-09-07_09-14-02 teacherluke.co.uk _2017_08_26_website-only-a-history-of-british-pop-.html  2021-09-07_09-14-02 teacherluke.co.uk _2021_04_11_714-robin-from-hamburg-🇩🇪-wisbolep-run.html  2021-09-07_09-14-02 teacherluke.wordpress.com _2012_09_27_113-setting-the-world-to-rights_.html  2021-09-13_05-37-36 teacherluke.co.uk _2009_04_12_episode-1-introduction_.html  2021-09-28_10-44-00 Archive & Comment Section _ (premium archive).html
