[tool.poetry]
name = "lep-downloader"
version = "3.0.0"
description = "LEP Downloader - CLI app for parsing and downloading episodes of Luke's English Podcast"
authors = ["Artem Hotenov <qa@hotenov.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hotenov/LEP-downloader"
repository = "https://github.com/hotenov/LEP-downloader"
documentation = "https://lep-downloader.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/hotenov/LEP-downloader/releases"

[tool.poetry.dependencies]
python = "^3.7.0"
click = "^8.0.1"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.902"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"
requests-mock = "^1.9.3"
flake8-black = "^0.2.3"
flake8-import-order = "^0.18.1"
rope = "^0.20.1"
yapf = "^0.31.0"

[tool.poetry.scripts]
lep-downloader = "lep_downloader.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["lep_downloader"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    'desert',
    'pytest',
    'pytest_mock.*',
    'requests.*',
    'bs4.*',
    'requests_mock.*',
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
force_sort_within_sections = false
lexicographical = true
order_by_type = false
group_by_package = true
src_paths = ["src", "tests"]
lines_after_imports = 2
