[tool.poetry]
name = "lep-downloader"
version = "3.0.0b3"
description = "LEP Downloader - CLI app for parsing and downloading episodes of Luke's English Podcast"
authors = ["Artem Hotenov <qa@hotenov.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hotenov/LEP-downloader"
repository = "https://github.com/hotenov/LEP-downloader"
documentation = "https://lep-downloader.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/hotenov/LEP-downloader/releases"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
single-source = "^0.4.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
safety = "^3.2.5"
coverage = {extras = ["toml"], version = "^7.6.1"}
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.1.6"}

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = ">=24.4.26"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
flake8-black = "^0.3.6"
flake8-import-order = "^0.18.2"
mypy = "^1.11.1"
darglint = "^1.8.1"
pep8-naming = "^0.14.1"

[tool.poetry.group.format.dependencies]
black = "^24.8.0"
yapf = "^0.40.2"
pre-commit = "^3.8.0"
pre-commit-hooks = "^4.6.0"
reorder-python-imports = "^3.13.0"
rope = "^1.13.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
sphinx-autobuild = ">=2024.4.16"
sphinx-click = "^6.0.0"
Pygments = "^2.18.0"
furo = ">=2024.8.6"


[tool.poetry.scripts]
lep-downloader = "lep_downloader.__main__:main"
lep-dl = "lep_downloader.__main__:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["lep_downloader"]

[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "lep_downloader.commands.makepdf",
    "lep_downloader.commands.utils",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    'desert',
    'pytest',
    'pytest_mock.*',
    'requests.*',
    'bs4.*',
    'requests_mock.*',
]
ignore_missing_imports = true


[tool.isort]
force_single_line = true
profile = "black"
force_sort_within_sections = false
lexicographical = true
order_by_type = false
group_by_package = true
src_paths = ["src", "tests"]
lines_after_imports = 2
